src/objects/PMF_Finca_Categoria_10_Lotes__c.object
<CustomObject>
    <fields>
        <fullName>Conocimiento_de_areas_de_lotes__c</fullName>
        <label>Conocimiento de áreas de lotes</label>
        <picklist>
            <picklistValues>
                <fullName>Conoce el área de todos los lotes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No conoce el área de todos los lotes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fecha__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mapa_de_la_finca__c</fullName>
        <label>Mapa de la finca</label>
        <picklist>
            <picklistValues>
                <fullName>Tiene mapa de la finca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No se ha levantado mapa de la finca</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nivel_categoria__c</fullName>
        <formula>IF( Puntaje_categoria__c &lt; 1, &apos;b. Bajo&apos;, &apos;a. Alto&apos;)</formula>
        <label>Nivel categoría</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_categoria__c</fullName>
        <formula>&apos;Lotes&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre categoría</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_tipo_fecha__c</fullName>
        <formula>Nombre_categoria__c + &apos; &apos; +  TEXT(Tipo__c) + &apos; &apos; + TEXT(Fecha__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre tipo fecha</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_de_Manejo_de_Finca__c</fullName>
        <label>Plan de Manejo de Finca</label>
        <referenceTo>Farm_Management_Plan__c</referenceTo>
        <relationshipLabel>PMF Finca Categoria 10 - Lotes</relationshipLabel>
        <relationshipName>PMF_Finca_Categorias_10_Lotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Puntaje_Conocimiento_de_areas_de_lotes__c</fullName>
        <formula>IF( ISPICKVAL( Conocimiento_de_areas_de_lotes__c , &apos;Conoce el área de todos los lotes&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Conocimiento de áreas de lotes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_Mapa_de_la_finca__c</fullName>
        <formula>IF( ISPICKVAL(  Mapa_de_la_finca__c , &apos;Tiene mapa de la finca&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Mapa de la finca</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_Registro_arboles_variedades_lote__c</fullName>
        <formula>IF( ISPICKVAL(  Registro_rboles_y_variedades_por_lotes__c , &apos;Tiene registro completo de árboles y variedades por lote&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Registro árboles variedades lote</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_Registro_de_labores_por_lote__c</fullName>
        <formula>IF( ISPICKVAL(  Registro_de_labores_por_lote__c , &apos;Registra labores por lote&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Registro de labores por lote</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_categoria__c</fullName>
        <formula>Puntaje_Mapa_de_la_finca__c + 
Puntaje_Conocimiento_de_areas_de_lotes__c + 
Puntaje_Registro_arboles_variedades_lote__c + 
Puntaje_Registro_de_labores_por_lote__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje categoría</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registro_de_labores_por_lote__c</fullName>
        <label>Registro de labores por lote</label>
        <picklist>
            <picklistValues>
                <fullName>Registra labores por lote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No registra labores por lote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registro_rboles_y_variedades_por_lotes__c</fullName>
        <label>Registro árboles y variedades por lotes</label>
        <picklist>
            <picklistValues>
                <fullName>Tiene registro completo de árboles y variedades por lote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El registro de árboles y variedades por lote no está completo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <picklist>
            <picklistValues>
                <fullName>Línea base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguimiento</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PMF Finca Categoria 10 - Lotes</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>PMF Finca Categoria 10 - Lotes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PMF Finca Categorias 10 - Lotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>